Refactor highlights retrieval to dynamically fetch the latest 9 featured blog posts, excluding drafts. Update PostCard mapping in index.astro for new data structure.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import PageLayout from '../layouts/PageLayout.astro';
 import PostCard from '../components/PostCard.astro';
 import { getHighlights } from '../utils/highlights';
 
-// Get highlights
+// Get dynamic highlights (latest 9 featured posts)
 const highlights = await getHighlights();
 ---
 
@@ -18,8 +18,8 @@ const highlights = await getHighlights();
 
   <div class="postcards-grid grid grid-cols-1 gap-6 md:grid-cols-3 md:gap-8">
     {
-      highlights.map((highlight) => (
-        <PostCard post={highlight.post} featured={highlight.post.data.featured} />
+      highlights.map((post) => (
+        <PostCard post={post} featured={post.data.featured} />
       ))
     }
   </div>
